syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/travacry/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc AddUser(AddUserRequest) returns (google.protobuf.Empty);
  rpc Ban(BanRequest) returns (google.protobuf.Empty);
  rpc Connect(ConnectRequest) returns (google.protobuf.Empty);
  rpc Send(SendRequest) returns (google.protobuf.Empty);
  rpc List(ListRequest) returns (ListResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

enum ItemState {
  chat_active = 0;
  chat_delete = 1;
  chat_update = 3;
}

message UserInfo {
  string name = 1; // for view in chat-room
  string email = 2; // unic
  ItemState state = 3;
}

message ChatInfo {
  string name = 1; // chat unic name for view
  ItemState state = 2;
  google.protobuf.Timestamp create_at = 3;
}

message ChatModel {
  int64 id = 1;
  ChatInfo chat = 2;
}

message UserModel {
  int64 id = 1;
  UserInfo user = 2;
}

message CreateRequest {
  ChatInfo chat = 1;
  repeated UserInfo users = 2;
}

message CreateResponse {
  int64 id = 1; // number in pool chat-rooms
}

message DeleteRequest {
  int64 id = 1;
}

message AddUserRequest {
  UserInfo user = 1;
}

message AddUserResponse {
  int64 id = 1;
}

message BanRequest {
  int64 id = 1;
}

message ConnectRequest {
  int64 id = 1;
}

message SendRequest {
  int64 from = 2; // email
  string text = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message ListRequest {
}

message ListResponse {
  repeated ChatModel chats = 1;
}

message ListUsersRequest {
  int64 id = 1;
}

message ListUsersResponse {
  repeated UserModel users = 1;
}


